[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pdemtools"
dynamic = ["version"]
description = "Conveniently search, download, and preprocess ArcticDEM and REMA products."
keywords = [ "geospatial", "elevation", "arcticdem", "rema", "dem",]
classifiers = [ "Intended Audience :: Science/Research", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: GIS", "Topic :: Scientific/Engineering :: Image Processing",]
requires-python = ">=3.10"
dependencies = ["rioxarray", "rasterio", "geopandas", "pandas", "shapely", "numpy", "GDAL", "opencv-python", "scipy", "numba", "pyarrow", "fiona"]  # GDAL

[[project.authors]]
name = "Tom Chudley"
email = "thomas.r.chudley@durham.ac.uk"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/trchudley/pdemtools"
Documentation = "https://pdemtools.readthedocs.io/"
Repository = "https://github.com/trchudley/pdemtools"
Issues = "https://github.com/trchudley/pdemtools/issues"

[tool.setuptools.dynamic]
version = {attr = "pdemtools.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdemtools.mosaic_index" = [ "*.gpkg",]
"pdemtools.test_data" = [ "*.parquet",]

[tool.coverage.run]
omit = [
    "config.py",
    "config-3.py",
    "config-3.12.py",
    ]