[metadata]
name = pdemtools
version = 0.1.0
author = Tom Chudley
author_email = thomas.r.chudley@durham.ac.uk
url = https://github.com/trchudley/pdemtools
description = "Conveniently search, download, and preprocess ArcticDEM and REMA products."
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geospatial, elevation, arcticdem, rema, dem
license = MIT
classifiers =
    # https://pypi.org/classifiers/
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find_namespace:
package_dir = 
  = src
python_requires = >=3.9
install_requires =
  rioxarray
  rasterio
  geopandas
  pandas
  shapely
  numpy
  opencv-python
  GDAL
  scipy
  numba
  pyarrow
  
include_package_data=True

[options.packages.find]
where = src

[options.package_data]
pdemtools.mosaic_index =
    *.gpkg
